--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 .db filter=lfs diff=lfs merge=lfs -text
+seh_mid/data.db filter=lfs diff=lfs merge=lfs -text
